--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -3,6 +3,7 @@
 @import "compass/css3/transform";
 
 @import "partials/main/_buttons";
+@import "partials/main/_checkboxes";
 @import "partials/main/_images";
 @import "partials/main/_profile";
 
