--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -287,3 +287,39 @@
     }
 }
 
+.blue-tb-right-button{
+  @include background(linear-gradient(top, #5d9cbb, #246382));
+  margin: 0;
+  height: 34px;
+  border-radius: 0 5px 5px 0;
+  border: 1px solid #1a4256;
+  @include box-shadow(inset 0 1px 0 #9dc3d6);
+  display: inline-block;
+
+  SPAN, BUTTON{
+    background: transparent;
+    border: none;
+  }
+
+
+  &:hover{
+    @include background(linear-gradient(top, #6ea6c2, #3a738f));
+  }
+
+  &.x-item-disabled{
+    opacity: 1;
+    @include background(linear-gradient(top, rgba(93, 156, 187, 0.6), rgba(36, 99, 130, 0.6)));
+    border-color: rgba(26, 66, 86, 0.6);
+
+    >SPAN{
+      opacity: 0.6;
+    }
+  }
+
+  BUTTON{
+    font: bold 14px Arial;
+    height: 34px;
+    color: white !important;
+    padding: 0 15px;
+  }
+}
