fixed categories select, added app state

--- a/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
@@ -20,7 +20,7 @@ BODY {
                     color: #818181;
                   }
                   .submit-btn{
-                    margin-left: 269px;
+                    margin-left: 244px;
                     width: 100px;
                     margin-top: 0px;
                     text-align: center;
@@ -64,6 +64,16 @@ BODY {
                       margin-left: 190px;
                       margin-top: -17px;
                       margin-bottom: 10px;
+                    }
+
+
+                    .permissions{
+                      .checkbox-list{
+                        .labeled-checkbox{
+                          margin-right: 60px;
+                        }
+
+                      }
                     }
 
 
