--- a/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
@@ -7,7 +7,19 @@ BODY {
             #main {
               DIV.app-info{
 
-
+                form{
+                  .submit-btn{
+                    width: 125px;
+                    text-align: center;
+                    position: absolute;
+                    top: 35px;
+                    right: 78px;
+                    button{
+                      text-transform: uppercase;
+                      font-size: 13px;
+                    }
+                  }
+                }
                 .action-bar{
                   label{
                     font: normal 14px Arial;
@@ -19,17 +31,7 @@ BODY {
                     border: none;
                     color: #818181;
                   }
-                  .submit-btn{
-                    margin-left: 244px;
-                    width: 100px;
-                    margin-top: 0px;
-                    text-align: center;
-                    padding-right: 8px;
-                    button{
-                      text-transform: uppercase;
-                      font-size: 13px;
-                    }
-                  }
+
 
                 }
                 .section{
