finished teacher info page

--- a/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
@@ -68,11 +68,8 @@
                     .section-title=self.getRole().getName()
                     div
                         .section-data
-                            .info-title=Msg.Id.toUpperCase()
-                            input(name="localId", value=self.getLocalId(), readonly)
-                        .section-data
                             .info-title=Msg.Email
-                            input(name="email", value=self.getEmail(), class="validate[required,email]")
+                            input(name="email", value=self.getEmail(), class="validate[custom[email], required]")
                         .section-data
                             .info-title=Msg.Cell
                             input(
@@ -80,7 +77,7 @@
                                 data-type=2,
                                 data-isPrimary=true,
                                 value=primaryPhone,
-                                class="validate[required,phone] primary-phone"
+                                class="validate[custom[phone], required] primary-phone"
                             )
                             input(name="phonesValue", value=self.getPhonesValue(), type="hidden")
                             +Select('cellService')(data-placeholder="*Cell Service*", value="")#cellService.grey-combo
@@ -94,7 +91,7 @@
                             .info-title=Msg.Birthday
                             +DateSelect().grey-combo-container(
                                 value=self.getBirthDate() ? self.getBirthDate().getDate() : null,
-                                name='birthDate'
+                                name='birthdate'
                             ).bd-select
                             .gender-part
                                 +Select('gender')(data-placeholder="Gender")#genderSelect.grey-combo
@@ -107,7 +104,7 @@
                             .info-title=Msg.Home_Phone
                             input(
                                 value=homePhone,
-                                class="validate[required] home-phone",
+                                class="validate[custom[phone], required] home-phone",
                                 data-id=homePhone && self.getHomePhone().getId().valueOf(),
                                 data-type=0,
                                 data-isPrimary=false,
@@ -120,7 +117,8 @@
                                 -addressesModel = new chlk.models.people.Addresses()
                                 -addressesModel.setItems(addresses);
                                 +RenderWith(addressesModel, chlk.templates.people.Addresses)
-            +Button(type="submit").special-button.blue-button#submit-info-button=Msg.Save
-            +Button().special-button.blue-button#cancell-edit-info-button=Msg.Cancel
+            .section-buttons
+                +Button(type="submit").special-button.blue-button#submit-info-button=Msg.Save
+                +Button(type="button").special-button.blue-button#cancell-edit-info-button=Msg.Cancel
 
 
