updatet teacher info styles

--- a/Chalkable.Web/assets/sass/partials/_controls.scss
+++ b/Chalkable.Web/assets/sass/partials/_controls.scss
@@ -6,3 +6,4 @@
 @import "partials/controls/_grid";
 @import "partials/controls/_left-right-toolbar";
 @import "partials/controls/_paginator";
+@import "partials/controls/_select";
