--- a/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
@@ -22,17 +22,15 @@
                 .section-title.pacifico=self.getRole().getName()
                 div
                     .section-data
-                        .info-title=Msg.Id.toUpperCase()
-                        .data-info.big-font-size=self.getLocalId()
-                    .section-data
                         .info-title=Msg.Email
-                        .data-info.big-font-size=self.getEmail()
+                        .data-info.low-font-size
+                            input(type="text", value=self.getEmail())
                     .section-data
                         .info-title=Msg.Cell
                         .data-info.big-font-size=primaryPhone
                     .section-data
                         .info-title=Msg.Birthday
-                        .data-info.big-font-size=self.getBirthDateText()
+                        .data-info.low-font-size=self.getBirthDateText()
                     .section-data.gender-box
                         div(class=self.getGender() ? self.getGender().toLowerCase() : '').gender-img-box
                         p=self.getGenderFullText()
@@ -45,7 +43,7 @@
                     .section-data
                         .info-title=Msg.Home_Address
                         each address in addresses
-                            .data-info.big-font-size=address.getValue()
+                            .data-info.low-font-size=address.getValue()
         .sections-info.other-section
             .section-title.pacifico=Msg.Other(true)
         if self.isAbleEdit()
@@ -59,8 +57,8 @@
                     button.simple-gray-button.file Upload
                         +FileUpload('teachers', 'uploadPicture', [self.getId().valueOf()])#add-attachment.simple-gray-button
                 .name-block
-                    input(name="firstname", value=self.getFirstName())
-                    input(name="lastname", value=self.getLastName())
+                    input(name="firstname", value=self.getFirstName(), class="validate[required]")
+                    input(name="lastname", value=self.getLastName(), class="validate[required]")
                     input(type="hidden", name="id", value=self.getId())
                     input(type="hidden", name="salutation", value=self.getSalutation())
             .sections
