--- a/Chalkable.Web/assets/sass/partials/controls/_form.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_form.scss
@@ -25,8 +25,23 @@
   }
 }
 
+.with-ok{
+  input, textarea{
+    &.ok{
+      background: url(images/register/ok.png) right center no-repeat, #fff;
+    }
+  }
+}
+
 input, textarea{
-  &.ok{
-    background: url(images/register/ok.png) right center no-repeat, #fff;
+  &.ok+.form-ok{
+    background: url(images/register/ok.png) center center no-repeat;
+    width: 20px;
+    height: 16px;
+    margin-left: 5px;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    top: 3px;
   }
 }
