--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -133,6 +133,7 @@
     var currentSchoolId = '@ViewData["SchoolId"]';
     var currentSchoolName = '@ViewData["SchoolName"]';
     var newNotifications = parseInt('@ViewData["UnshownNotificationsCount"]', 10) || 0;
+    var azurePictureUrl = 'http://chalkable1.blob.core.windows.net/pictureconteiner/pictureconteiner_blob_';
     
     var USER_ROLE_EXT = '@ViewData["Rolename"]';
     var currentChlkPerson = JSON.parse(HtmlEncode('@ViewData["CurrentPerson"]')).data;
