--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -6,6 +6,7 @@
 @import "partials/main/_checkboxes";
 @import "partials/main/_images";
 @import "partials/main/_profile";
+@import "partials/main/_setup";
 
 @import "partials/main/_storage";
 @import "partials/main/people/_list";
