--- a/Chalkable.Web/assets/jade/activities/apps/add-app-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/add-app-dialog.jade
@@ -1,4 +1,5 @@
-.dialog.add-app.gray
-    .x-window-header
-        span Category
-    .x-window-body
+.dialog.add-app
+    +ActionForm('apps', 'create')
+        input(type="text", name="name")
+        +Button(type="submit").special-button2.blue.add Add
+        +Button.special-button.special-button2.blue.cancel.close Cancel
