--- a/Chalkable.Web/assets/sass/partials/_demo.scss
+++ b/Chalkable.Web/assets/sass/partials/_demo.scss
@@ -90,7 +90,6 @@ BODY {
     -o-border-image: url(images/demo/demo-bar.png) 6 round round;
     border-image: url(images/demo/demo-bar.png) 6 round round;
     display: block;
-    z-index: 9999999;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -98,6 +97,23 @@ BODY {
 
     .demo-end{
       display: none;
+    }
+
+
+    #dev-apps{
+      &.wide{
+        min-width: 246px;
+      }
+    }
+
+    #dev-apps-list{
+      &.x-hidden{
+        display: none;
+      }
+    }
+
+    &.top{
+      z-index: 999999;
     }
 
     H{
