--- a/Chalkable.Web/assets/sass/partials/main/popups/_popups.scss
+++ b/Chalkable.Web/assets/sass/partials/main/popups/_popups.scss
@@ -215,5 +215,40 @@
         }
       }
     }
+
+    &.add-app{
+      position: fixed;
+      bottom: 6px;
+      left: 5px;
+      width: 247px;
+      background: url(images/demo/demo-bg.png) 0 0 repeat;
+      height: 79px;
+
+
+      .add, .cancel{
+        margin-top: 8px;
+      }
+
+      .add{
+        margin-right: 20px;
+        margin-left: 6px;
+      }
+
+      button{
+        width: 90px;
+        font-size: 17px;
+        font-weight: bold;
+
+
+
+      }
+
+      input{
+        margin-top: 5px;
+        width: 225px;
+        margin-left: 6px;
+        border-radius: 0;
+      }
+    }
   }
 }
