--- a/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
@@ -1,7 +1,7 @@
 mixin SlideCheckbox(name, val)
     .slide-checkbox
         .wrapper
-            +Checkbox(name, val)
+            +Checkbox(name, val)(attributes)
             label(for=name)
 
 
