--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -141,6 +141,14 @@ html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fiel
   vertical-align: top;
 }
 
+.relative{
+  position: relative;
+}
+
+.absolute{
+  position: absolute;
+}
+
 a, a:visited, a:link {
   &:not(.not-blue){
     color: $link-color;
